# ColorGradeTool

./: .gitignore  Cargo.toml  README.md  preset3.json  presetyay.json  test_preset.json
UE_blueprints/: ColorGrading.uasset  MI_colorGrading.uasset
config/: default.json
presets/: preset.json
src/: app.rs  colorgrade.rs  main.rs
src/app/: colorgrade.rs  configmanager.rs  presetmanager.rs  remotecontrol.rs  simple_mode.rs  sliderbox.rs  style.rs  window_utilities.rs
src/colorgrade/: sliderbox.rs
src/presets/: preset2.json
